fix squish

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 #root {
   max-width: 1280px;
-  max-height: 800px;
   margin: 0 auto;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  min-height: 100vh;
 }
 
 header {
